# aws-sns-sqs-dd-tracing-example

./: .gitignore  Cargo.toml  README.md  cleanup.sh  run-consumer.sh  run-producer.sh  run-publisher.sh  run.sh  setup.sh
opentelemetry-aws-messaging/: Cargo.toml
opentelemetry-aws-messaging/src/: lib.rs  sns.rs  sqs.rs
src/: consumer.rs  main.rs  producer.rs  publisher.rs
