[package]
name = "sns-sqs-example"
version = "0.1.0"
edition = "2021"
default-run = "sns-sqs-example"

[[bin]]
name = "sns-sqs-example"
path = "src/main.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

[dependencies]
aws-config = "1.1.0"
aws-sdk-sns = "1.11.0"
aws-sdk-sqs = "1.10.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.4"
datadog-opentelemetry = "0.2.0"
opentelemetry = "0.31"

